     bug #19318)
   * Fixed unit sound animation timings wherever the {SOUND:SLOW} and
     {SOUND:POISON} macros, and several macros from animation-utils2.cfg are used
     (see bug #19274)
   * Restart is no longer required to toggle desktop notifications
   * Display the savegame version when warning the user about unsupported or
     mismatched versions (bug #7243)
 * Unit changes and balancing:
   * New extra_define ENABLE_WOLF_ADVANCEMENT to optionally enable Wolves
     advancement to Great Wolves and Direwolves
   * New extra_define ENABLE_TROLL_SHAMAN to optionally enable Troll Whelps
     advancement to Troll Shamans (not in multiplayer)

Version 1.10.0:
 * Campaigns:
   * Legend of Wesmere:
     * Scenario 03: Fixed bug #19067: Control over Galtrid's side stays with the
       player after the arrival of Kalenz
     * Scenario 22: Fixed bug #19236: Cleodil was missing and no recall list
   * An Orcish Incursion:
     * Scenario 3: select a new unit with the Adviser (sic) role for dialogs if
       the original unit selected at the start of the scenario died
   * Under the Burning Suns:
     * Scenario 5: Fixed bug #19303: one of the dwarves was spawning in a wall.
   * The Rise of Wesnoth:
     * Peoples in Decline: fixed a message not shown when the Sea Serpent appears
 * Editor:
   * Added Etheral Abyss terrain (Qxua) to the Cave category, too
   * Updated the terrain palette icons for winter/fall single or mixed forested
     hills so they show the default base Hhd instead of Hh
 * Graphics:
   * Fixed some spearman attack animations being too slow in some directions
 * Language and i18n:
   * Updated translations: Chinese (Simplified), Chinese (Traditional), Czech,
     Finnish, French, Galician, German, Hungarian, Italian, Latin, Lithuanian,
     Old English, Polish, Serbian, Slovak, Spanish
 * Lua API:
   * Extend and improve wesnoth.select_hex, deprecate wesnoth.highlight_hex
 * Multiplayer: