@@ -373,6 +373,26 @@
 											border_size = 10
 
 											[toggle_button]
+												id = "reselect_difficulty"
+												definition = "default"
+
+												size_text = _ "Reselect Difficulty"
+												label = _ "Reselect Difficulty"
+											[/toggle_button]
+
+										[/column]
+
+									[/row]
+
+
+									[row]
+
+										[column]
+											horizontal_alignment = "left"
+											border = "bottom"
+											border_size = 10
+
+											[toggle_button]
 												id = "show_replay"
 												definition = "default"
 
