@@ -18,3 +18,4 @@
 std::string game::load_game_exception::game;
 bool game::load_game_exception::show_replay;
 bool game::load_game_exception::cancel_orders;
+std::string game::load_game_exception::difficulty;
