@@ -67,6 +67,8 @@ game_classification::game_classification():
 	campaign_type(),
 	campaign_define(),
 	campaign_xtra_defines(),
+	campaign_difficulties(),
+	campaign_difficulty_descriptions(),
 	campaign(),
 	history(),
 	abbrev(),
@@ -86,6 +88,8 @@ game_classification::game_classification(const config& cfg):
 	campaign_type(cfg["campaign_type"].empty() ? "scenario" : cfg["campaign_type"].str()),
 	campaign_define(cfg["campaign_define"]),
 	campaign_xtra_defines(utils::split(cfg["campaign_extra_defines"])),
+	campaign_difficulties(utils::split(cfg["campaign_difficulties"])),
+	campaign_difficulty_descriptions(utils::split(cfg["campaign_difficulty_descriptions"], ';')),
 	campaign(cfg["campaign"]),
 	history(cfg["history"]),
 	abbrev(cfg["abbrev"]),
@@ -105,6 +109,8 @@ game_classification::game_classification(const game_classification& gc):
 	campaign_type(gc.campaign_type),
 	campaign_define(gc.campaign_define),
 	campaign_xtra_defines(gc.campaign_xtra_defines),
+	campaign_difficulties(gc.campaign_difficulties),
+	campaign_difficulty_descriptions(gc.campaign_difficulty_descriptions),
 	campaign(gc.campaign),
 	history(gc.history),
 	abbrev(gc.abbrev),
@@ -127,6 +133,8 @@ config game_classification::to_config() const
 	cfg["campaign_type"] = campaign_type;
 	cfg["campaign_define"] = campaign_define;
 	cfg["campaign_extra_defines"] = utils::join(campaign_xtra_defines);
+	cfg["campaign_difficulties"] = utils::join<std::vector<std::string> >(campaign_difficulties, ",");
+	cfg["campaign_difficulty_descriptions"] = utils::join<std::vector<std::string> >(campaign_difficulty_descriptions, ";");
 	cfg["campaign"] = campaign;
 	cfg["history"] = history;
 	cfg["abbrev"] = abbrev;
@@ -338,6 +346,8 @@ void game_state::write_snapshot(config& cfg) const
 
 	cfg["campaign_define"] = classification_.campaign_define;
 	cfg["campaign_extra_defines"] = utils::join(classification_.campaign_xtra_defines);
+	cfg["campaign_difficulties"] = utils::join<std::vector<std::string> >(classification_.campaign_difficulties, ",");
+	cfg["campaign_difficulty_descriptions"] = utils::join<std::vector<std::string> >(classification_.campaign_difficulty_descriptions, ";");
 	cfg["next_underlying_unit_id"] = str_cast(n_unit::id_manager::instance().get_save_id());
 	cfg["can_end_turn"] = can_end_turn_;
 
@@ -381,6 +391,8 @@ void extract_summary_from_config(config& cfg_save, config& cfg_summary)
 	cfg_summary["label"] = cfg_save["label"];
 	cfg_summary["parent"] = cfg_save["parent"];
 	cfg_summary["campaign_type"] = cfg_save["campaign_type"];
+	cfg_summary["campaign_difficulties"] = cfg_save["campaign_difficulties"];
+	cfg_summary["campaign_difficulty_descriptions"] = cfg_save["campaign_difficulty_descriptions"];
 	cfg_summary["scenario"] = cfg_save["scenario"];
 	cfg_summary["campaign"] = cfg_save["campaign"];
 	cfg_summary["difficulty"] = cfg_save["difficulty"];
@@ -555,7 +567,7 @@ game_state::game_state(const game_state& state) :
 
 game_state& game_state::operator=(const game_state& state)
 {
-	// Use copy constructor to make sure we are coherant
+	// Use copy constructor to make sure we are coherent
 	if (this != &state) {
 		this->~game_state();
 		new (this) game_state(state) ;
