@@ -26,6 +26,7 @@
 #include "gui/dialogs/game_load.hpp"
 #include "gui/dialogs/game_save.hpp"
 #include "gui/dialogs/message.hpp"
+#include "gui/dialogs/campaign_difficulty.hpp"
 #include "gui/widgets/settings.hpp"
 #include "gui/widgets/window.hpp"
 #include "log.hpp"
@@ -411,6 +412,7 @@ loadgame::loadgame(display& gui, const config& game_config, game_state& gamestat
 	, gui_(gui)
 	, gamestate_(gamestate)
 	, filename_()
+	, difficulty_()
 	, load_config_()
 	, show_replay_(false)
 	, cancel_orders_(false)
@@ -425,6 +427,31 @@ void loadgame::show_dialog(bool show_replay, bool cancel_orders)
 		load_dialog.show(gui_.video());
 
 		if (load_dialog.get_retval() == gui2::twindow::OK){
+			if (load_dialog.reselect_difficulty()) {
+
+				config cfg_summary;
+				std::string dummy;
+
+				try {
+					manager::load_summary(load_dialog.filename(), cfg_summary, &dummy);
+				} catch(game::load_game_failed&) {
+					cfg_summary["corrupt"] = "yes";
+				}
+
+				const std::string difficulty_descriptions = cfg_summary["campaign_difficulty_descriptions"];
+				const std::string difficulties = cfg_summary["campaign_difficulties"];
+
+				std::vector<std::string> difficulty_options = utils::split(difficulty_descriptions, ';');
+				std::vector<std::string> difficulty_list = utils::split(difficulties, ',');
+
+				gui2::tcampaign_difficulty difficulty_dlg(difficulty_options);
+				difficulty_dlg.show(gui_.video());
+
+				if (difficulty_dlg.get_retval() != gui2::twindow::OK)
+					return;
+
+				difficulty_ = difficulty_list[difficulty_dlg.selected_index()];
+			}
 			filename_ = load_dialog.filename();
 			show_replay_ = load_dialog.show_replay();
 			cancel_orders_ = load_dialog.cancel_orders();
@@ -445,15 +472,17 @@ void loadgame::load_game()
 	show_dialog(false, false);
 
 	if(filename_ != "")
-		throw game::load_game_exception(filename_, show_replay_, cancel_orders_);
+		throw game::load_game_exception(filename_, show_replay_, cancel_orders_, difficulty_);
 }
 
 void loadgame::load_game(
 		  const std::string& filename
 		, const bool show_replay
-		, const bool cancel_orders)
+		, const bool cancel_orders
+		, const std::string& difficulty)
 {
 	filename_ = filename;
+	difficulty_ = difficulty;
 
 	if (filename_.empty()){
 		show_dialog(show_replay, cancel_orders);
@@ -481,10 +510,15 @@ void loadgame::load_game(
         }
 	}
 
+	if (!difficulty_.empty())
+		load_config_["difficulty"] = difficulty_;
+
 	gamestate_.classification().difficulty = load_config_["difficulty"].str();
 	gamestate_.classification().campaign_define = load_config_["campaign_define"].str();
 	gamestate_.classification().campaign_type = load_config_["campaign_type"].str();
 	gamestate_.classification().campaign_xtra_defines = utils::split(load_config_["campaign_extra_defines"]);
+	gamestate_.classification().campaign_difficulties = utils::split(load_config_["campaign_difficulties"]);
+	gamestate_.classification().campaign_difficulty_descriptions = utils::split(load_config_["campaign_difficulty_descriptions"], ';');
 	gamestate_.classification().version = load_config_["version"].str();
 
 	check_version_compatibility();
@@ -900,6 +934,9 @@ void savegame::extract_summary_data_from_save(config& out)
 	out["parent"] = gamestate_.classification().parent;
 	out["campaign"] = gamestate_.classification().campaign;
 	out["campaign_type"] = gamestate_.classification().campaign_type;
+	out["campaign_difficulties"] = utils::join<std::vector<std::string> >(gamestate_.classification().campaign_difficulties, ",");
+	out["campaign_difficulty_descriptions"] = utils::join<std::vector<std::string> >
+		(gamestate_.classification().campaign_difficulty_descriptions, ";");
 	out["scenario"] = gamestate_.classification().scenario;
 	out["difficulty"] = gamestate_.classification().difficulty;
 	out["version"] = gamestate_.classification().version;
