@@ -38,6 +38,9 @@ Version 1.11.0-svn:
    * Restart is no longer required to toggle desktop notifications
    * Display the savegame version when warning the user about unsupported or
      mismatched versions (bug #7243)
+   * Implemented feature request for difficulty changing during campaigns.
+     The feature is still gui2 only and thus still hidden per default.
+     (see bug #10978)
  * Unit changes and balancing:
    * New extra_define ENABLE_WOLF_ADVANCEMENT to optionally enable Wolves
      advancement to Great Wolves and Direwolves
